k8s/api/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: api
spec:
  selector:
    app: api  
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  type: ClusterIP
