k8s/api/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
  namespace: api
  labels:
    component: http-server
    reason: aprendizado
spec:
  tls:
  - hosts:
    - www.pedelogo.proativaconsultoria.io
    secretName: pedelogo-tls-cert
  rules:
    - host: www.pedelogo.proativaconsultoria.io
      http:
        paths:
        - backend:
            service:
              name: api
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
